[fixes, finishing] * 4 images home pics and style * 3 images home style * footer style and content * toolbar added bags

--- a/src/app/core/components/contact-form/contact-form.component.html
+++ b/src/app/core/components/contact-form/contact-form.component.html
@@ -34,7 +34,7 @@
           </div>
           <div class="col-12 flex-grow-1">
             <mat-form-field appearance="outline" class="example-full-width">
-              <mat-label>Naslov</mat-label>
+              <mat-label>Naslov poruke</mat-label>
               <input
                 matInput
                 placeholder="Naslov poruke"
