--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,17 +1,12 @@
-<div class="container-fluid mt-5 py-5" style="border-top:1px solid #606060">
+<div class="container-fluid mt-5 py-5" style="border-top: 1px solid #606060;">
   <div class="col-12 d-flex flex-wrap footer-content">
+
     <div class="col-md-3 col-sm-6">
-      <div class="newsletter">
-        <p>PRETPLATI SE ZA EMAIL OBAVEŠTENJA</p>
-        <div class="subscribe-inputs d-flex flex-wrap ">
-          <input type="email" placeholder="Unesite Vaš email"/>
-          <button>PRETPLATI SE</button>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3 col-sm-6">
-      <p><b>KORISNIČKA PODRŠKA</b></p>
-      <p>POMOĆ</p>
+      <p><b>NAŠA PONUDA</b></p>
+      <p>CIPELE</p>
+      <p>SANDALE</p>
+      <p>ČIZME</p>
+      <p>TORBE</p>
     </div>
     <div class="col-md-3 col-sm-6">
       <p><b>LA PISTA</b></p>
@@ -21,13 +16,41 @@
       <p>COOKIE</p>
     </div>
     <div class="col-md-3 col-sm-6">
-<!--      <p><b>SHOPPING ONLINE</b></p>-->
-<!--      <p>PAYMENTS METHOD</p>-->
-<!--      <p>SHIPPING METHOD</p>-->
-<!--      <p>RETURN POLICY</p>-->
+      <p><b>KORISNIČKA PODRŠKA</b></p>
+      <p>POMOĆ</p>
+    </div>
+    <div class="col-md-3 col-sm-6 d-flex flex-column">
+      <p><b>ZAPRATITE NAS</b></p>
+      <div class="d-flex">
+        <a
+          href="https://www.facebook.com/la.pista.100"
+          target="_blank"
+          class="mr-3"
+        >
+          <img
+            src="/assets/img/facebook.png"
+            alt=""
+            class="img-fluid"
+            style="height: 30px;"
+          />
+        </a>
+        <a href="https://www.instagram.com/web.lapista" target="_blank">
+          <img
+            src="/assets/img/instagram.png"
+            alt=""
+            class="img-fluid"
+            style="height: 30px;"
+          />
+        </a>
+      </div>
     </div>
   </div>
 </div>
-<div class="container-fluid text-center d-flex align-items-center justify-content-center" style="border-top: 1px solid #606060;height: 40px">
-  <p style="font-size: 12px;margin: 0;padding: 0">© Copyright 2020 - LaPista</p>
+<div
+  class="container-fluid text-center d-flex align-items-center justify-content-center"
+  style="border-top: 1px solid #606060; height: 40px;"
+>
+  <p style="font-size: 12px; margin: 0; padding: 0;">
+    © Copyright 2021 - LaPista
+  </p>
 </div>
