--- a/src/app/core/components/home-four-images/home-four-images.component.html
+++ b/src/app/core/components/home-four-images/home-four-images.component.html
@@ -1,69 +1,93 @@
+<div class="container-fluid px-0 mx-0 my-5 overflow-hidden">
+  <div class="col-lg-12 d-flex flex-wrap flex-sm-wrap-reverse">
+    <div class="col-lg-5">
+      <img
+        src="https://en.identitashoes.com/m/tel/imghomedic2.png"
+        alt=""
+        class="img-fluid"
+      />
+    </div>
+    <div
+      class="col-lg-7 d-flex flex-column justify-content-center align-items-center mt-3"
+    >
+      <p class="text-uppercase" style="letter-spacing: 2px; font-size: 22px;">
+        <b>Lapista universe</b>
+      </p>
+      <p style="font-size: 14px; letter-spacing: 1.5px; max-width: 800px;">
+        A new concept of fashion, interpreted through the exclusivity of our
+        models. Each new collection is an aesthetic journey through sinuous
+        lines, heels, colours and exclusive materials. From pumps to boots
+        through sandals and ankle boots, the Identità shoe is not just an
+        accessory to wear, but a manifestation of emotion to see and touch; a
+        special woman needs a special shoe. Become part of our world.
+      </p>
+    </div>
+  </div>
+</div>
+
 <div class="container-fluid my-5">
-<!--  <div class="container">-->
-    <div class="col-12">
-      <div class="d-flex flex-column align-items-center text-center">
-        <h3>
-          <b>PRIDRUŽITE SE I DOBIJATE 15% POPUSTA NA PRVU NARUDŽBINU</b>
-        </h3>
-        <p>Budite u toku sa najnovijim vestima i ostvarite 15% popusta
-        </p>
-        <div class="newsletter">
-          <p>PRETPLATITE SE NA OBAVEŠTENjA</p>
-          <div class="subscribe-inputs d-flex">
-            <input type="email" placeholder="Upišite vaš email" />
-            <button style="height: 40px">PRETPLATITI SE</button>
-          </div>
-        </div>
+  <div class="container d-flex justify-content-center">
+    <div
+      class="col-6 d-flex flex-column justify-content-center align-items-center"
+    >
+      <p
+        style="font-size: 22px; text-transform: uppercase; letter-spacing: 2px;"
+      >
+        <b>Become part of our world.</b>
+      </p>
+      <p style="font-size: 14px; letter-spacing: 1px; line-height: 28px;">
+        The Identità essence manifested in a shot. Luxurious handcrafted
+        creations, proudly made in Italy, ready to give to your outfit a touch
+        of glamor making your style unique.
+      </p>
+    </div>
+  </div>
+</div>
+<!--Four images-->
+<div class="container-fluid">
+  <div class="row four-images-row">
+    <div class="col-lg-3 col-md-6 one-of-four">
+      <img
+        src="assets/img/cipele.png"
+        alt=""
+        class="img-fluid position-relative one-four-image"
+        [routerLink]="'/products'"
+      />
+      <div class="image-overlay">
+        <p>Cipele</p>
       </div>
     </div>
-<!--  </div>-->
-</div>
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-12 d-flex flex-wrap">
-      <div class="col-lg-3 col-md-6 one-of-four">
-        <img
-          src="https://identitashoes.it/4imghome/1.jpg"
-          alt=""
-          class="img-fluid position-relative"
-          [routerLink]="'/products'"
-        />
-        <div class="image-overlay">
-          <p>Img Overlay</p>
-        </div>
+    <div class="col-lg-3 col-md-6 one-of-four">
+      <img
+        src="https://en.identitashoes.com/m/tel/imghome11222359.png"
+        alt=""
+        class="img-fluid position-relative one-four-image"
+        [routerLink]="'/products'"
+      />
+      <div class="image-overlay">
+        <p>Sandale</p>
       </div>
-      <div class="col-lg-3 col-md-6 one-of-four">
-        <img
-          src="https://identitashoes.it/4imghome/2.jpg"
-          alt=""
-          class="img-fluid position-relative"
-          [routerLink]="'/products'"
-        />
-        <div class="image-overlay">
-          <p>Img Overlay</p>
-        </div>
+    </div>
+    <div class="col-lg-3 col-md-6 one-of-four">
+      <img
+        src="https://en.identitashoes.com/m/tel/imghome11222358.png"
+        alt=""
+        class="img-fluid position-relative one-four-image"
+        [routerLink]="'/products'"
+      />
+      <div class="image-overlay">
+        <p>Čizme</p>
       </div>
-      <div class="col-lg-3 col-md-6 one-of-four">
-        <img
-          src="https://identitashoes.it/4imghome/3.jpg"
-          alt=""
-          class="img-fluid position-relative"
-          [routerLink]="'/products'"
-        />
-        <div class="image-overlay">
-          <p>Img Overlay</p>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6 one-of-four">
-        <img
-          src="https://identitashoes.it/4imghome/4.jpg"
-          alt=""
-          class="img-fluid position-relative"
-          [routerLink]="'/products'"
-        />
-        <div class="image-overlay">
-          <p>Img Overlay</p>
-        </div>
+    </div>
+    <div class="col-lg-3 col-md-6 one-of-four">
+      <img
+        src="https://identitashoes.it/4imghome/3.jpg"
+        alt=""
+        class="img-fluid position-relative one-four-image"
+        [routerLink]="'/products'"
+      />
+      <div class="image-overlay">
+        <p>Torbe</p>
       </div>
     </div>
   </div>
