--- a/src/app/modules/contact/pages/contact.component.html
+++ b/src/app/modules/contact/pages/contact.component.html
@@ -1,19 +1,26 @@
 <div class="container fluid mt-5">
   <div class="container">
     <div class="col-lg-12 d-flex flex-wrap">
-      <div class="col-lg-4 col-md-6 d-flex justify-content-center">
+      <div class="col-lg-3 col-md-6 d-flex justify-content-center">
        <div class="d-flex flex-column">
          <p><b>TELEFON</b></p>
-         <a href="tel:+39 0883 198 5747">+39 0883 198 5747</a>
+         <a href="tel:+381638105618" mask="(000)00 000 00 00">+381638105618</a>
        </div>
       </div>
-      <div class="col-lg-4 col-md-6 d-flex justify-content-center">
+      <div class="col-lg-3 col-md-6 d-flex justify-content-center">
         <div class="d-flex flex-column">
           <p><b>WHATSAPP</b></p>
-          <a href="tel:+39 0883 198 5747">+39 0883 198 5747</a>
+          <a href="tel:+381638105618">+381638105618</a>
         </div>
       </div>
-      <div class="col-lg-4 col-md-12 d-flex justify-content-center">
+      <div class="col-lg-3 col-md-12 d-flex justify-content-center">
+        <div class="d-flex flex-column">
+          <p><b>ADRESA</b></p>
+          <p style="font-size: 14px"><b>Djordja Stanojevića 11dj , lokal 3</b></p>
+          <p style="font-size: 12px">Zgrada Jorgovan , Belville</p>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-12 d-flex justify-content-center">
         <div class="d-flex flex-column">
           <p><b>PIŠITE NAM</b></p>
           <p style="font-size: 12px">Cilj nam je da odgovorimo u roku od 24 sata, međutim, tokom zauzetih perioda poput praznika, rasprodaja i posebnih kampanja, možda će potrajati malo duže.</p>
