--- a/src/app/core/components/home-four-images/home-four-images.component.scss
+++ b/src/app/core/components/home-four-images/home-four-images.component.scss
@@ -28,27 +28,50 @@
     }
   }
 }
-
-.one-of-four {
-  margin-bottom: 15px;
-  .image-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
+.four-images-row{
+  //max-height: 500px;
+  height: 100%;
+  .one-of-four {
     width: 100%;
-    cursor: pointer;
-
-    p {
-      font-size: 30px;
-      font-weight: bold;
-      text-transform: uppercase;
-      color: white;
-      text-shadow: black 2px 2px 5px;
+    margin-bottom: 15px;
+    img.one-four-image{
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
     }
+    .image-overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+      width: 100%;
+      cursor: pointer;
+
+      p {
+        font-size: 30px;
+        font-weight: bold;
+        text-transform: uppercase;
+        color: white;
+        text-shadow: black 2px 2px 5px;
+        transition: 0.3s;
+      }
+
+      &:hover{
+        p{
+          transform: scale(1.3);
+          transition: 0.5s;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .four-images-row{
+    max-height: 500px;
   }
 }
 
