--- a/src/app/core/components/home-three-images/home-three-images.component.html
+++ b/src/app/core/components/home-three-images/home-three-images.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
   <div class="container">
-    <div class="d-flex flex-column align-items-center py-3">
+    <div class="d-flex flex-column align-items-center py-3 my-5">
       <h3 class="text-center"><b>NOVA KOLEKCIJA JESEN / ZIMA 2021</b></h3>
-      <p>Kupite sada novu kolekciju jesen / zima 2021!</p>
-      <button style="border-radius: 0px; border: 1px solid black;height: 40px;padding: 5px 25px;background: transparent">
+<!--      <p>Kupite sada novu kolekciju jesen / zima 2021!</p>-->
+      <button class="mt-5" style="border-radius: 0px; border: 1px solid black;height: 40px;padding: 5px 25px;background: transparent">
         Naša ponuda!
       </button>
     </div>
