--- a/src/app/core/components/toolbar/toolbar.component.html
+++ b/src/app/core/components/toolbar/toolbar.component.html
@@ -4,8 +4,12 @@
       <p style="font-size: 12px">Language option</p>
     </div>
 
-    <div class="d-flex" *ngIf="innerWidth<=768" style="width: 20px">
-      <img src="assets/img/left-chevron.svg" (click)="goBack()" alt="lapista go back" style="max-height: 20px;min-height: 15px">
+    <div class="d-flex" style="width: 20px">
+      <img src="assets/img/left-chevron.svg"
+           *ngIf="innerWidth<=768 && ruta!== '/'"
+           (click)="goBack()"
+           alt="lapista go back"
+           style="max-height: 20px;min-height: 15px">
     </div>
     <div class="toolbar-logo d-flex justify-content-center col-lg-6" [routerLink]="'/'" style="cursor:pointer;">
       <img src="assets/img/svg/lapista-logo-desktop.svg"
@@ -19,9 +23,10 @@
            class="img-fluid"
            style="max-height: 40px;max-width:200px;object-fit: contain">
     </div>
-<!-- cart -->
+    <!-- cart -->
     <div class="d-flex justify-content-end m-0 p-0 position-relative" [routerLink]="'/cart'" style="cursor: pointer">
-      <img src="https://identitashoes.it/shop.png" alt="" class="img-fluid position-relative cart-image" style="height: 25px">
+      <img src="https://identitashoes.it/shop.png" alt="" class="img-fluid position-relative cart-image"
+           style="height: 25px">
       <span class="count-in-cart" *ngIf="returnCountInCart()>0">{{returnCountInCart()}}</span>
     </div>
   </div>
