--- a/src/app/core/components/toolbar/toolbar.component.html
+++ b/src/app/core/components/toolbar/toolbar.component.html
@@ -4,10 +4,11 @@
       <p style="font-size: 12px">Language option</p>
     </div>
 
-    <div class="d-flex" style="width: 20px">
+    <div class="d-flex" style="width: 20px"
+         *ngIf="innerWidth<=768">
       <img src="assets/img/left-chevron.svg"
-           *ngIf="innerWidth<=768 && ruta!== '/'"
            (click)="goBack()"
+           *ngIf="ruta!== '/'"
            alt="lapista go back"
            style="max-height: 20px;min-height: 15px">
     </div>
