[Separated routes,shoes,bags] * Separated routes bags,shoes to list separately * Route '/products' show all products * routed images and links

--- a/src/app/core/components/home-four-images/home-four-images.component.html
+++ b/src/app/core/components/home-four-images/home-four-images.component.html
@@ -14,12 +14,14 @@
         <b>Lapista universe</b>
       </p>
       <p style="font-size: 14px; letter-spacing: 1.5px; max-width: 800px;">
-        A new concept of fashion, interpreted through the exclusivity of our
-        models. Each new collection is an aesthetic journey through sinuous
-        lines, heels, colours and exclusive materials. From pumps to boots
-        through sandals and ankle boots, the Identità shoe is not just an
-        accessory to wear, but a manifestation of emotion to see and touch; a
-        special woman needs a special shoe. Become part of our world.
+        Novi koncept mode, protumačen kroz ekskluzivnost naših modela. Svaka
+        nova kolekcija predstavlja estetsko putovanje kroz vijugave linije,
+        potpetice, boje i ekskluzivne materijale. Cipela Lapista nije samo dodatak za nošenje, već
+        manifestacija osećaja koji treba videti i dodirnuti.
+        <br>
+        <b style="font-size: 16px">Posebnoj ženi je potrebna posebna cipela.
+          <br> Postanite deo našeg sveta.
+        </b>
       </p>
     </div>
   </div>
@@ -33,12 +35,11 @@
       <p
         style="font-size: 22px; text-transform: uppercase; letter-spacing: 2px;"
       >
-        <b>Become part of our world.</b>
+        <b>POSTANITE DEO NAŠEG SVETA.</b>
       </p>
       <p style="font-size: 14px; letter-spacing: 1px; line-height: 28px;">
-        The Identità essence manifested in a shot. Luxurious handcrafted
-        creations, proudly made in Italy, ready to give to your outfit a touch
-        of glamor making your style unique.
+        Luksuzno ručno izrađene kreacije, ponosno napravljene u Italiji, spremne
+        da vašoj odeći daju dodir glamura čineći vaš stil jedinstvenim.
       </p>
     </div>
   </div>
@@ -46,40 +47,37 @@
 <!--Four images-->
 <div class="container-fluid">
   <div class="row four-images-row">
-    <div class="col-lg-3 col-md-6 one-of-four">
+    <div class="col-lg-3 col-md-6 one-of-four" [routerLink]="'products/shoes'">
       <img
         src="assets/img/cipele.png"
         alt=""
         class="img-fluid position-relative one-four-image"
-        [routerLink]="'/products'"
       />
       <div class="image-overlay">
         <p>Cipele</p>
       </div>
     </div>
-    <div class="col-lg-3 col-md-6 one-of-four">
+    <div class="col-lg-3 col-md-6 one-of-four" [routerLink]="'products/shoes'">
       <img
         src="https://en.identitashoes.com/m/tel/imghome11222359.png"
         alt=""
         class="img-fluid position-relative one-four-image"
-        [routerLink]="'/products'"
       />
       <div class="image-overlay">
         <p>Sandale</p>
       </div>
     </div>
-    <div class="col-lg-3 col-md-6 one-of-four">
+    <div class="col-lg-3 col-md-6 one-of-four" [routerLink]="'products/shoes'">
       <img
         src="https://en.identitashoes.com/m/tel/imghome11222358.png"
         alt=""
         class="img-fluid position-relative one-four-image"
-        [routerLink]="'/products'"
       />
       <div class="image-overlay">
         <p>Čizme</p>
       </div>
     </div>
-    <div class="col-lg-3 col-md-6 one-of-four">
+    <div class="col-lg-3 col-md-6 one-of-four" [routerLink]="'products/bags'">
       <img
         src="https://identitashoes.it/4imghome/3.jpg"
         alt=""
