--- a/src/app/core/components/home-three-images/home-three-images.component.html
+++ b/src/app/core/components/home-three-images/home-three-images.component.html
@@ -3,7 +3,14 @@
     <div class="d-flex flex-column align-items-center py-3 my-3">
       <h3 class="text-center"><b>NOVA KOLEKCIJA JESEN / ZIMA 2021</b></h3>
 <!--      <p>Kupite sada novu kolekciju jesen / zima 2021!</p>-->
-      <button class="mt-2" style="border-radius: 0px; border: 1px solid black;height: 40px;padding: 5px 25px;background: transparent">
+      <button class="mt-2"
+              style="border-radius: 0px;
+              border: 1px solid black;
+              height: 40px;
+              padding: 5px 25px;
+              background: transparent;
+              outline: none"
+              [routerLink]="'/products'">
         Naša ponuda!
       </button>
     </div>
