--- a/src/app/modules/about/pages/about.component.html
+++ b/src/app/modules/about/pages/about.component.html
@@ -1,41 +1,46 @@
 <div class="container-fluid">
   <div class="container my-5">
     <h3 class="mb-2">NAŠA PRIČA</h3>
-    <p class="mb-3"><b>Gde vas strast može dovesti?</b></p>
+    <p class="mb-3"><b>GDE VAS MOŽE VODITI STRAST?</b></p>
 
-    <p style="font-size: 14px; line-height: 20px;font-weight: 300">
-      Everyone asked to himself this question at least once in life, the answer
-      we found looking back on our history can be resumed in the Gracian quote :
-      "Passion colors everything it touches.”
+    <p style="font-size: 16px; line-height: 32px;">
+      Naš cilj je da želje skrivene u srcu svake žene pretvorimo u stvarnost,a to je ono što svaku od naših cipela cini jedinstvenim stilskim iskustvom.
+      Od 2010 godine ova strast je postala lajtmotiv Italijanske kompanije IDENTITÀ,dajući iskren i strastven doprinos svetu mode.
+      Idelana i umetnicka avangarda ne odriče se tradicionalno ručno izrađene proizvodnje gde je svaki pojedinačni završetak isključivo ručno opšiven.
       <br/>
       <br/>
-      Starting from the crafted production where every single shoes is refined
-      by hand passing by the obsessive research of the finest material crossing
-      the deepest desire of woman, with the unique packaging, every single shoes
-      is an experience of style.
+      Opsesivna potraga za materijalima,precizan i tačan izbor modela čine ovu kompaniju jedinstvenom na svetskom tržištu.
+      Fascinirani kvalitetom i modelima,koji su rangu velikih modnih kuća,odlučili smo da brend IDENTITÀ pretstavimo i u Srbiji.
       <br/>
       <br/>
-      Identità srl is created in the headquarter of Trani ( bt) in the
-      departments of graphic, customer service, marketing e buying. Our
-      production is made all around Italy, by the best crafters.
+      <b>“POSETI NAS I IZRAZI SVOJ IDENTITET”</b>
       <br/>
       <br/>
-      Orders are shipped world wide from our warehouses in box made with the
-      maximum of the attention to every detail, with our certification of
-      autenticity, dust bag and accessories.
+      U našem maloprodajn objektu”LA PISTA”  u ulici Đorđa Stanojevića 11đ lokal 3 (zgrada Jorgovan) BELLVILE,Beograd ili poručite online.
+      Pakete pripremljene sa najvećom pažnjom,sertifikatom o autentičnosti,oznakom porekla materijala,vrećicom za prašinu i kutijom,šaljemo u roku 24h na teritoriji Srbije ili 2/4 radna dana u zemlje regiona.
       <br/>
       <br/>
-      The box is branded with the logo of the Maison, our shipping is always
-      EXPRESS, 24 working hours for Italy and 2/ 4 working days for any other
-      country in the world.
+      <b>“BUDI ŽENA SA IDENTITETOM”</b>
       <br/>
-      <br/>
-      Identità S.R.L. has many more additional service and options both online
-      and offline like the ÉLITE program and the Flash Sales.
-      <br/>
-      <br/>
-      Chic, glamour, bon ton, pop, soft,luxury, the brand style is charming and
-      it will be charming in every single creation.
+<!--      <br/>-->
+<!--      The box is branded with the logo of the Maison, our shipping is always-->
+<!--      EXPRESS, 24 working hours for Italy and 2/ 4 working days for any other-->
+<!--      country in the world.-->
+<!--      <br/>-->
+<!--      <br/>-->
+<!--      Identità S.R.L. has many more additional service and options both online-->
+<!--      and offline like the ÉLITE program and the Flash Sales.-->
+<!--      <br/>-->
+<!--      <br/>-->
+<!--      Chic, glamour, bon ton, pop, soft,luxury, the brand style is charming and-->
+<!--      it will be charming in every single creation.-->
     </p>
   </div>
 </div>
+
+
+
+
+
+
+
