--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -2,11 +2,11 @@
   <div class="col-12 d-flex flex-wrap footer-content">
 
     <div class="col-md-3 col-sm-6">
-      <p><b>NAŠA PONUDA</b></p>
-      <p>CIPELE</p>
-      <p>SANDALE</p>
-      <p>ČIZME</p>
-      <p>TORBE</p>
+      <p [routerLink]="'/products/shoes'"><b>NAŠA PONUDA</b></p>
+      <p [routerLink]="'/products/shoes'">CIPELE</p>
+      <p [routerLink]="'/products/shoes'">SANDALE</p>
+      <p [routerLink]="'/products/shoes'">ČIZME</p>
+      <p [routerLink]="'/products/bags'">TORBE</p>
     </div>
     <div class="col-md-3 col-sm-6">
       <p><b>LA PISTA</b></p>
