--- a/src/app/modules/contact/pages/contact.component.html
+++ b/src/app/modules/contact/pages/contact.component.html
@@ -4,13 +4,13 @@
       <div class="col-lg-3 col-md-6 d-flex justify-content-center">
        <div class="d-flex flex-column">
          <p><b>TELEFON</b></p>
-         <a href="tel:+381638105618" mask="(000)00 000 00 00">+381638105618</a>
+         <a href="tel:+381638105618" mask="(000)00 000 00 00">+381 63 810 56 18</a>
        </div>
       </div>
       <div class="col-lg-3 col-md-6 d-flex justify-content-center">
         <div class="d-flex flex-column">
           <p><b>WHATSAPP</b></p>
-          <a href="tel:+381638105618">+381638105618</a>
+          <a href="tel:+381638105618">+381 63 810 56 18</a>
         </div>
       </div>
       <div class="col-lg-3 col-md-12 d-flex justify-content-center">
