--- a/src/app/core/components/custom-modal/custom-modal.component.html
+++ b/src/app/core/components/custom-modal/custom-modal.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header m-0 p-0">
-  <h4 class="modal-title">{{ inputData?.what }} edit</h4>
+  <h4 class="modal-title"> {{inputData?.type === 'new' ? 'Dodaj' : 'Edituj'}} {{ inputData?.what }} </h4>
   <!--  <button type="button" class="close" aria-label="Close"
             (click)="activeModal.close()">
       <span aria-hidden="true">&times;</span>
@@ -20,7 +20,7 @@
   <!-- item-->
   <div class="d-flex" *ngIf="inputData.what === 'item'">
     <form [formGroup]="itemGroup" class="d-flex flex-column">
-      <label for="category">Category</label>
+      <label for="category">Kategorija</label>
 
       <select name="cars" id="category" formControlName="category">
         <option *ngFor="let c of allCategories" value="{{ c.id }}">{{
@@ -29,19 +29,19 @@
       </select>
 
       <mat-form-field class="example-full-width">
-        <mat-label>Name</mat-label>
+        <mat-label>Naziv</mat-label>
         <input matInput matNativeControl formControlName="name" />
       </mat-form-field>
       <mat-form-field class="example-full-width">
-        <mat-label>Price</mat-label>
+        <mat-label>Cena</mat-label>
         <input matInput matNativeControl formControlName="price" />
       </mat-form-field>
       <mat-form-field class="example-full-width">
-        <mat-label>Sescription</mat-label>
+        <mat-label>Opis</mat-label>
         <input matInput matNativeControl formControlName="description" />
       </mat-form-field>
       <mat-form-field class="example-full-width">
-        <mat-label>Image</mat-label>
+        <mat-label>URL Slika</mat-label>
         <input matInput matNativeControl formControlName="image" />
       </mat-form-field>
     </form>
@@ -51,26 +51,25 @@
   <!-- color-->
   <div class="d-flex" *ngIf="inputData.what === 'color'">
     <form [formGroup]="colorGroup" class="d-flex flex-column">
-      <select name="cars" formControlName="item">
+      <label for="item">Proizvod</label>
+      <select name="item" id="item" formControlName="item">
         <option *ngFor="let i of allItems" value="{{ i.id }}">{{
           i.name
         }}</option>
       </select>
 
       <mat-form-field class="example-full-width">
-        <mat-label>Name</mat-label>
+        <mat-label>Naziv boje</mat-label>
         <input matInput matNativeControl formControlName="name" />
       </mat-form-field>
+<!--      <mat-form-field class="example-full-width">-->
+<!--        <mat-label>Status</mat-label>-->
+<!--        <input matInput matNativeControl formControlName="status" />-->
+<!--      </mat-form-field>-->
       <mat-form-field class="example-full-width">
-        <mat-label>Status</mat-label>
-        <input matInput matNativeControl formControlName="status" />
-      </mat-form-field>
-      <mat-form-field class="example-full-width">
-        <mat-label>Image</mat-label>
+        <mat-label>URL Slika</mat-label>
         <input matInput matNativeControl formControlName="image" />
       </mat-form-field>
-
-      <!-- TODO: Resiti color picker -->
 
       <!--<mat-form-field class="example-full-width">
         <mat-label>Hex</mat-label>
@@ -80,7 +79,7 @@
       <!-- Radi -->
 
       <div class="d-flex">
-        <label for="colorId">Color </label>
+        <label for="colorId">Sifra boje</label>
         <input
           type="color"
           id="colorId"
@@ -109,6 +108,7 @@
   <!-- size-->
   <div class="d-flex" *ngIf="inputData.what === 'size'">
     <form [formGroup]="sizeGroup" class="d-flex flex-column">
+      <label for="item">Proizvod</label>
       <select
         name="item"
         formControlName="item"
@@ -119,10 +119,11 @@
         }}</option>
       </select>
 
+      <label for="color">Boja</label>
       <select
         name="color"
         formControlName="color"
-
+        id="color"
       >
         <option *ngFor="let c of selectedItem?.colors" value="{{ c.id }}">{{
           c.name
@@ -130,13 +131,13 @@
       </select>
 
       <mat-form-field class="example-full-width">
-        <mat-label>Size Name</mat-label>
+        <mat-label>Naziv velicine</mat-label>
         <input matInput matNativeControl formControlName="sizeName" />
       </mat-form-field>
-      <mat-form-field class="example-full-width">
-        <mat-label>Size Count</mat-label>
-        <input matInput matNativeControl formControlName="sizeCount" />
-      </mat-form-field>
+<!--      <mat-form-field class="example-full-width">-->
+<!--        <mat-label>Size Count</mat-label>-->
+<!--        <input matInput matNativeControl formControlName="sizeCount" />-->
+<!--      </mat-form-field>-->
     </form>
   </div>
   <!-- size-->
@@ -144,8 +145,10 @@
   <!-- heels-->
   <div class="d-flex" *ngIf="inputData.what === 'heel'">
     <form [formGroup]="heelGroup" class="d-flex flex-column">
+      <label for="item">Proizvod</label>
       <select
         name="item"
+        id="item"
         formControlName="item"
         (change)="setSelectedItem($event)"
       >
@@ -154,8 +157,10 @@
         }}</option>
       </select>
 
+      <label for="color">Boja</label>
       <select
         name="color"
+        id="color"
         formControlName="color"
         [disabled]="selectedItem"
         (change)="setSelectedColor($event)"
@@ -165,18 +170,19 @@
         }}</option>
       </select>
 
-      <select name="size" formControlName="size" [disabled]="selectedColor">
+      <label for="size">Velicina</label>
+      <select name="size" formControlName="size" id="size" [disabled]="selectedColor">
         <option *ngFor="let s of selectedColor?.sizes" value="{{ s.id }}">{{
           s.sizeName
         }}</option>
       </select>
 
       <mat-form-field class="example-full-width">
-        <mat-label>Heel Name</mat-label>
+        <mat-label>Visina podpetice</mat-label>
         <input matInput matNativeControl formControlName="heelName" />
       </mat-form-field>
       <mat-form-field class="example-full-width">
-        <mat-label>Heel Count</mat-label>
+        <mat-label>Br. komada na stanju</mat-label>
         <input matInput matNativeControl formControlName="heelCount" />
       </mat-form-field>
     </form>
