--- a/src/app/modules/cart/pages/cart.component.html
+++ b/src/app/modules/cart/pages/cart.component.html
@@ -20,17 +20,17 @@
           class="img-fluid"
         />
       </div>
-      <div class="col-lg-5 d-flex flex-column shopping-cart-item-info">
+      <div class="col-lg-5 d-flex flex-column shopping-cart-item-info align-items-center justify-content-center">
         <span>Name:
           <p>{{ item.name }}</p>
         </span>
         <span>Color:
           <p>{{ item.color }}</p>
         </span>
-        <span>Size:
+        <span *ngIf="item?.size">Size:
           <p>{{ item.size }}</p>
         </span>
-        <span>Heel:
+        <span *ngIf="item?.heel?.heelName">Heel:
           <p>{{ item.heel.heelName }}</p>
         </span>
         <span>Price:
@@ -43,8 +43,8 @@
     </div>
     <div class="d-flex col-lg-8 flex-grow-1 m-0 p-0 order-buttons"
          *ngIf="shoppingItems && shoppingItems.length > 0">
-      <button class="mr-3">Poruči</button>
-      <button class="cart-delete-all" (click)="deleteLocalStorage()">Obriši sve</button>
+<!--      <button class="mr-3">Poruči</button>-->
+      <button class="cart-delete-all" (click)="deleteLocalStorage()"><b>Obriši sve</b></button>
     </div>
   </div>
 
