--- a/src/app/core/components/home-three-images/home-three-images.component.html
+++ b/src/app/core/components/home-three-images/home-three-images.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="container">
     <div class="d-flex flex-column align-items-center py-3 my-3">
-      <h3 class="text-center"><b>NOVA KOLEKCIJA JESEN / ZIMA 2021</b></h3>
+<!--      <h3 class="text-center"><b>NOVA KOLEKCIJA JESEN / ZIMA 2021</b></h3>-->
 <!--      <p>Kupite sada novu kolekciju jesen / zima 2021!</p>-->
       <button class="mt-2"
               style="border-radius: 0px;
@@ -11,7 +11,7 @@
               background: transparent;
               outline: none"
               [routerLink]="'/products'">
-        Naša ponuda!
+        <b class="text-uppercase">Naša ponuda</b>
       </button>
     </div>
   </div>
