--- a/src/app/modules/about/pages/about.component.html
+++ b/src/app/modules/about/pages/about.component.html
@@ -16,8 +16,8 @@
       <b>“POSETI NAS I IZRAZI SVOJ IDENTITET”</b>
       <br/>
       <br/>
-      U našem maloprodajn objektu”LA PISTA”  u ulici Đorđa Stanojevića 11đ lokal 3 (zgrada Jorgovan) BELLVILE,Beograd ili poručite online.
-      Pakete pripremljene sa najvećom pažnjom,sertifikatom o autentičnosti,oznakom porekla materijala,vrećicom za prašinu i kutijom,šaljemo u roku 24h na teritoriji Srbije ili 2/4 radna dana u zemlje regiona.
+      U našem maloprodajnom objektu ”LA PISTA”  u ulici Đorđa Stanojevića 11đ lokal 3 (zgrada Jorgovan) BELLVILE,Beograd ili poručite online.
+      Pakete pripremljene sa najvećom pažnjom,sertifikatom o autentičnosti,oznakom porekla materijala,vrećicom za prašinu i kutijom,šaljemo u roku 24h na teritoriji Srbije.
       <br/>
       <br/>
       <b>“BUDI ŽENA SA IDENTITETOM”</b>
