[listing items, about] * list every color separately on route products/all * Few style modifications about products (listed items)

--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="col-12 d-flex flex-wrap footer-content">
 
     <div class="col-md-3 col-sm-6">
-      <p [routerLink]="'/products/shoes'"><b>NAŠA PONUDA</b></p>
+      <p [routerLink]="'/products/all'"><b>NAŠA PONUDA</b></p>
       <p [routerLink]="'/products/shoes'">CIPELE</p>
       <p [routerLink]="'/products/shoes'">SANDALE</p>
       <p [routerLink]="'/products/shoes'">ČIZME</p>
