--- a/src/app/core/components/home-four-images/home-four-images.component.html
+++ b/src/app/core/components/home-four-images/home-four-images.component.html
@@ -16,13 +16,21 @@
       <p style="font-size: 14px; letter-spacing: 1.5px; max-width: 800px;">
         Novi koncept mode, protumačen kroz ekskluzivnost naših modela. Svaka
         nova kolekcija predstavlja estetsko putovanje kroz vijugave linije,
-        potpetice, boje i ekskluzivne materijale. Cipela Lapista nije samo dodatak za nošenje, već
-        manifestacija osećaja koji treba videti i dodirnuti.
-        <br>
-        <b style="font-size: 16px">Posebnoj ženi je potrebna posebna cipela.
-          <br> Postanite deo našeg sveta.
+        potpetice, boje i ekskluzivne materijale. Cipela Lapista nije samo
+        dodatak za nošenje, već manifestacija osećaja koji treba videti i
+        dodirnuti.
+        <br />
+        <b style="font-size: 16px;"
+          >Posebnoj ženi je potrebna posebna cipela. <br />
+          Postanite deo našeg sveta.
         </b>
       </p>
+      <button
+        [routerLink]="'/about'"
+        class="mb-5"
+        style="border-radius: 0px;border: 1px solid black;height: 40px;padding: 5px 25px;background: transparent;outline: none;">
+        Više o nama
+      </button>
     </div>
   </div>
 </div>
