--- a/src/app/core/components/toolbar/toolbar.component.html
+++ b/src/app/core/components/toolbar/toolbar.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="toolbar-top d-flex justify-content-between align-items-center">
     <div style="max-width: 25px;" *ngIf="innerWidth>768">
-      <p style="font-size: 12px">Language option</p>
+      <p style="font-size: 12px;display: none">Language option</p>
     </div>
 
     <div class="d-flex" style="width: 20px"
