--- a/src/app/core/components/home-three-images/home-three-images.component.html
+++ b/src/app/core/components/home-three-images/home-three-images.component.html
@@ -10,7 +10,7 @@
               padding: 5px 25px;
               background: transparent;
               outline: none"
-              [routerLink]="'/products'">
+              [routerLink]="'/products/all'">
         <b class="text-uppercase">Naša ponuda</b>
       </button>
     </div>
