[listing items, shoes, by category] * list items by category (sandals,boots,pumps,bags) * list all shoes (all items except bags) * Added route link to home 3img and 4img * footer route

--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -3,9 +3,9 @@
 
     <div class="col-md-3 col-sm-6">
       <p [routerLink]="'/products/all'"><b>NAŠA PONUDA</b></p>
-      <p [routerLink]="'/products/shoes'">CIPELE</p>
-      <p [routerLink]="'/products/shoes'">SANDALE</p>
-      <p [routerLink]="'/products/shoes'">ČIZME</p>
+      <p [routerLink]="'/products/pumps'">CIPELE</p>
+      <p [routerLink]="'/products/sandals'">SANDALE</p>
+      <p [routerLink]="'/products/boots'">ČIZME</p>
       <p [routerLink]="'/products/bags'">TORBE</p>
     </div>
     <div class="col-md-3 col-sm-6">
