--- a/src/app/core/components/home-four-images/home-four-images.component.html
+++ b/src/app/core/components/home-four-images/home-four-images.component.html
@@ -55,7 +55,7 @@
 <!--Four images-->
 <div class="container-fluid">
   <div class="row four-images-row">
-    <div class="col-lg-3 col-md-6 one-of-four" [routerLink]="'products/shoes'">
+    <div class="col-lg-3 col-md-6 one-of-four" [routerLink]="'products/pumps'">
       <img
         src="assets/img/cipele.png"
         alt=""
@@ -65,7 +65,7 @@
         <p>Cipele</p>
       </div>
     </div>
-    <div class="col-lg-3 col-md-6 one-of-four" [routerLink]="'products/shoes'">
+    <div class="col-lg-3 col-md-6 one-of-four" [routerLink]="'products/sandals'">
       <img
         src="https://en.identitashoes.com/m/tel/imghome11222359.png"
         alt=""
@@ -75,7 +75,7 @@
         <p>Sandale</p>
       </div>
     </div>
-    <div class="col-lg-3 col-md-6 one-of-four" [routerLink]="'products/shoes'">
+    <div class="col-lg-3 col-md-6 one-of-four" [routerLink]="'products/boots'">
       <img
         src="https://en.identitashoes.com/m/tel/imghome11222358.png"
         alt=""
