--- a/src/app/modules/products/pages/products.component.html
+++ b/src/app/modules/products/pages/products.component.html
@@ -2,21 +2,22 @@
   <div class="row" *ngIf="allShoes">
     <div class="col-lg-4 col-md-4 col-sm-6 col-6" *ngFor="let product of allShoes">
 
-      <!-- ZA GRUPNI PRIKAZ -->
-      <div class="prod-item text-center" *ngIf="parametar !== 'all'">
+      <!-- ZA GRUPNI PRIKAZ /products -->
+      <div class="prod-item text-center" *ngIf="!parametar">
         <img src="{{product?.colors[0]?.image}}" alt="" class="img-fluid" [routerLink]="'/product/' + product.id" style="cursor: pointer">
         <p><b>{{product?.name.toUpperCase()}}</b></p>
         <p>{{product?.price}} RSD</p>
-<!--        <span style="font-size: 12px">Get {{product.price}} elite points</span>-->
       </div>
 
-      <!-- ZA PTIKAZ SVIH SA BOJAMA -->
-      <div class="prod-item text-center" *ngIf="parametar === 'all'">
+      <!-- ZA PTIKAZ SVIH SA BOJAMA /products/${param} -->
+      <div class="prod-item text-center">
         <img src="{{product?.image}}" alt="" class="img-fluid" [routerLink]="'/product/' + product?.item?.id" style="cursor: pointer">
         <p><b>{{product?.item?.name.toUpperCase()}}</b></p>
         <p>{{product?.item?.price}} RSD</p>
-        <!--        <span style="font-size: 12px">Get {{product.price}} elite points</span>-->
       </div>
+
+
+
     </div>
   </div>
 </div>
