[Contact map] * added map to contact * fixed ""@types/googlemaps": "3.39.12" to prevent errors in build

--- a/src/app/modules/contact/pages/contact.component.html
+++ b/src/app/modules/contact/pages/contact.component.html
@@ -1,3 +1,9 @@
+<!-- this creates a google map on the page with the given lat/lng from -->
+<!-- the component as the initial center of the map: -->
+<agm-map [latitude]="lat" [longitude]="lng" [zoom]="15">
+  <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+</agm-map>
+
 <div class="container fluid mt-5">
   <div class="container">
     <div class="col-lg-12 d-flex flex-wrap">
@@ -29,4 +35,5 @@
     </div>
   </div>
 </div>
+
 <app-contact-form></app-contact-form>
